@@ -1,3 +1,11 @@
+2002-09-30  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/ctype.h (_tolower): Move inlined definition out of
+	std namespace.
+	(_tolower): Likewise.
+	(is_wctype): Move into non-ANSI, block. Qualify wctype_t with
+	 __CSTD.
+
 2002-09-29  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/wchar.h (__VALIST): Correct typo in __GNUC__ guard.
